# nanalogue

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CONTRIBUTIONS.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  deny.toml  install.sh
.githooks/: pre-commit
.github/: CODEOWNERS  dependabot.yml  install-sh.sha256
.github/workflows/: build-binaries.yml  build-docker-image-arm64.yml  build-docker-image.yml  cargo-llvm-cov.yml  cargo_llvm_cov.yml  ci.yml  ci_nightly_doc.yml  ci_nightly_no_cargo_test.yml  ci_nightly_test.yml  ci_non_locked_packages.yml  guard-install-script.yml  publish-crates.yml  push-docker-images.yml  release.yml  test-install-script.yml  test-sister-packages.yml  weekly-doc-review.yml
examples/: README.md  example_1.Mm_Ml.bam  example_1.bam  example_1.bam.bai  example_1.mM_mL.bam  example_1.mM_mL.bam.bai  example_1.mm_ml.bam  example_10.sam  example_11.sam  example_1_detailed_pretty_print  example_1_detailed_print  example_1_invalid_sequencing_summary  example_1_peek  example_1_read_info  example_1_read_table_hide_mods  example_1_read_table_show_mods  example_1_read_table_show_mods_seq_summ  example_1_sequencing_summary  example_1_window_reads  example_1_window_reads_gt_0pt4  example_1_window_reads_gt_0pt8  example_2.sam  example_2_sequencing_summary  example_2_table_w_zero_hide_mods  example_2_table_w_zero_hide_mods_seq_summ  example_2_table_w_zero_show_mods  example_2_table_w_zero_show_mods_seq_summ  example_2_zero_len.sam  example_3.bam  example_3.bam.bai  example_3_peek  example_3_read_stats  example_3_subset_1  example_3_subset_w_invalid  example_4_invalid_basequal_len.sam  example_5_valid_basequal.sam  example_5_valid_basequal_read_table_show_mods  example_5_valid_basequal_read_table_show_mods_subset  example_5_valid_basequal_read_table_show_mods_subset_no_overlap  example_6.sam  (+8 more)
github_workflow_scripts/: check-md-links.mjs  check-path-leaks.mjs  check-repo-guardrails.sh  doc-audit.ts  validate-changelog.mjs
src/: analysis.rs  cli.rs  commands.rs  constants.rs  error.rs  fibertools_types.rs  file_utils.rs  lib.rs  main.rs  read_utils.rs  serde_curr_read.rs  simulate_mod_bam.rs  utils.rs  write_simulated_mod_bam.rs
src/subcommands/: .reads_table.rs.swp  bc_len_vs_align_len.rs  count_mods.rs  find_modified_reads.rs  mod.rs  peek.rs  read_info.rs  read_stats.rs  reads_table.rs  window_reads.rs
src/utils/: allowed_agctn.rs  basemods_to_seq_coord_calls.rs  complement.rs  contains.rs  dna_restrictive.rs  f32_abs_val_at_most1.rs  f32_abs_val_below1.rs  f32_bw0and1.rs  fibertools_types.rs  filter_by_ref_coords.rs  genomic_region.rs  intersects.rs  mod.rs  mod_char.rs  ord_pair.rs  parse_mm_tag.rs  path_or_url_or_stdin.rs  read_field.rs  read_state.rs  read_states.rs  resource_protector.rs  restrict_mod_called_strand.rs  threshold_state.rs  uuid.rs
tests/: curr_read_builder.rs  curr_reads_to_dataframe.rs  filter_by_ref_coords.rs  read_utils.rs  set_mod_data_restricted_options.rs  test_filter_by_ref_coords.rs  todo_macro_code_coverage.rs
tests/commands/: main.rs
