[package]
name = "nanalogue"
version = "0.1.0"
edition = "2024"
description = "Mod BAM parsing tools in rust"
license = "MIT"
readme = "README.md"
authors = ["Sathish Thiyagarajan <sathish.thiyagarajan@earlham.ac.uk>"]
repository = "https://github.com/DNAReplicationLab/nanalogue.git"
categories = ["Command line utilities", "Parsing tools", "Science"]
keywords = ["modbam", "bam", "dna", "rna", "dna_methylation", "dna_mods", "rna_mods", "rna_methylation" ]

[dependencies]
fibertools-rs = "0.7.0"
rust-htslib = "0.46.0"
clap = { version = "4.0.29", features = ["derive", "wrap_help"] }
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bio = "1.5.0"
lazy_static = "1.4.0"
regex = "1.11.1"
log = "0.4.22"
bio-types = "1.0.4"
bedrs = { version = "0.2.26", features = [ "serde" ] }
thiserror = "2.0.12"
rand = "0.9.2"
itertools = "0.14.0"
indoc = "2.0.6"
uuid = { version = "1.18.1", features = [ "v4" ] }

[lib]
name = "nanalogue_core" 
path = "src/lib.rs"

[[bin]]
name = "nanalogue"
path = "src/main.rs"

[lints.clippy]
pedantic = "deny"
cast_possible_truncation = "deny"
allow_attributes = "deny"
allow_attributes_without_reason = "deny"

[lints.rust]
missing_copy_implementations = "deny"
missing_debug_implementations = "deny"
missing_docs = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unused_extern_crates = "deny"
unused_import_braces = "deny"
unused_qualifications = "deny"
unused_results = "deny"
