[package]
name = "nanalogue"
version = "0.1.0"
edition = "2024"
description = "Mod BAM parsing tools in rust"
license = "MIT"
readme = "README.md"
authors = ["Sathish Thiyagarajan <sathish.thiyagarajan@earlham.ac.uk>"]
repository = "https://github.com/DNAReplicationLab/nanalogue.git"
categories = ["command-line-utilities", "science::bioinformatics::sequence-analysis", "science::bioinformatics::genomics"]
keywords = ["modbam", "bam", "dna", "rna", "dna_methylation", "dna_mods", "rna_mods", "rna_methylation" ]

[dependencies]
fibertools-rs = "0.7.0"
rust-htslib = "0.46.0"
clap = { version = "4.0.29", features = ["derive", "wrap_help"] }
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bio = "1.5.0"
regex = "1.11.1"
bio-types = "1.0.4"
bedrs = { version = "0.2.26", features = [ "serde" ] }
thiserror = "2.0.12"
rand = "0.9.2"
itertools = "0.14.0"
uuid = { version = "1.18.1", features = [ "v4" ] }

[dev-dependencies]
indoc = "2.0.6"

[lib]
name = "nanalogue_core" 
path = "src/lib.rs"

[[bin]]
name = "nanalogue"
path = "src/main.rs"

[lints.clippy]
pedantic = "deny"
allow_attributes = "deny"
allow_attributes_without_reason = "deny"
arithmetic_side_effects = "deny"
assertions_on_result_states = "deny"
cast_possible_truncation = "deny"
clone_on_ref_ptr = "deny"
create_dir = "deny"
doc_include_without_cfg = "deny"
else_if_without_else = "deny"
empty_drop = "deny"
empty_enum_variants_with_brackets = "deny"
empty_structs_with_brackets = "deny"

[lints.rust]
missing_copy_implementations = "deny"
missing_debug_implementations = "deny"
missing_docs = "deny"
redundant_imports = "deny"
redundant_lifetimes = "deny"
single_use_lifetimes = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unit_bindings = "deny"
unreachable_pub = "deny"
unused_extern_crates = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_macro_rules = "deny"
unused_qualifications = "deny"
unused_results = "deny"
