[package]
name = "nanalogue"
version = "0.1.7"
edition = "2024"
description = "BAM/Mod BAM parsing and analysis tool with a single-molecule focus"
license = "MIT"
readme = "README.md"
authors = ["Sathish Thiyagarajan <sathish.thiyagarajan@earlham.ac.uk>"]
repository = "https://github.com/DNAReplicationLab/nanalogue.git"
homepage = "https://www.nanalogue.com"
categories = ["command-line-utilities", "science::bioinformatics::sequence-analysis", "science::bioinformatics::genomics"]
keywords = ["modbam", "bam", "dna", "dna_methylation", "rna"]
exclude = [".github/", ".gitignore"]

[dependencies]
fibertools-rs = "0.8.1"
rust-htslib = "0.46.0"
clap = { version = "4.5.57", features = ["derive", "wrap_help"] }
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bio = "3.0.0"
regex = "1.11.1"
bio-types = "1.0.4"
bedrs = { version = "0.2.26", features = [ "serde" ] }
thiserror = "2.0.12"
rand = "0.9.2"
itertools = "0.14.0"
uuid = { version = "1.20.0", features = [ "v4" ] }
url = { version = "2.5.7", features = [ "serde" ] }
derive_builder = "0.20.2"
polars = { version = "0.51", features = ["lazy"] }
openssl-probe = "0.2"

[build-dependencies]
vergen = "=9.0.6" # needed for `fibertools-rs`.

[dev-dependencies]
indoc = "2.0.6"

[lib]
name = "nanalogue_core" 
path = "src/lib.rs"

[[bin]]
name = "nanalogue"
path = "src/main.rs"

[[bin]]
name = "nanalogue_sim_bam"
path = "src/bin/main_simulate_mod_bam.rs"

[lints.clippy]
pedantic = "deny"
allow_attributes = "deny"
allow_attributes_without_reason = "deny"
arithmetic_side_effects = "deny"
assertions_on_result_states = "deny"
cast_possible_truncation = "deny"
clone_on_ref_ptr = "deny"
create_dir = "deny"
doc_include_without_cfg = "deny"
else_if_without_else = "deny"
empty_drop = "deny"
empty_enum_variants_with_brackets = "deny"
empty_structs_with_brackets = "deny"
exhaustive_enums = "deny"
exhaustive_structs = "deny"
exit = "deny"
field_scoped_visibility_modifiers = "deny"
filetype_is_file = "deny"
get_unwrap = "deny"
if_then_some_else_none = "deny"
impl_trait_in_params = "deny"
indexing_slicing = "deny"
infinite_loop = "deny"
iter_over_hash_type = "deny"
large_include_file = "deny"
let_underscore_must_use = "deny"
let_underscore_untyped = "deny"
lossy_float_literal = "deny"
map_err_ignore = "deny"
map_with_unused_argument_over_ranges = "deny"
missing_assert_message = "deny"
missing_asserts_for_indexing = "deny"
missing_docs_in_private_items = "deny"
mixed_read_write_in_expression = "deny"
module_name_repetitions = "deny"
multiple_inherent_impl = "deny"
non_zero_suggestions = "deny"
panic = "deny"
partial_pub_fields = "deny"
pathbuf_init_then_push = "deny"
pattern_type_mismatch = "deny"
redundant_test_prefix = "deny"
redundant_type_annotations = "deny"
ref_patterns = "deny"
renamed_function_params = "deny"
rest_pat_in_fully_bound_structs = "deny"
return_and_then = "deny"
same_name_method  = "deny"
semicolon_inside_block = "deny"
separated_literal_suffix = "deny"
shadow_reuse = "deny"
shadow_same = "deny"
shadow_unrelated = "deny"
string_lit_chars_any = "deny"
string_slice = "deny"
suspicious_xor_used_as_pow = "deny"
tests_outside_test_module = "deny"
todo = "deny"
try_err = "deny"
unnecessary_self_imports = "deny"
unneeded_field_pattern = "deny"
unused_result_ok = "deny"
unused_trait_names = "deny"
use_debug = "deny"
verbose_file_reads = "deny"
wildcard_enum_match_arm = "deny"

[lints.rust]
missing_copy_implementations = "deny"
missing_debug_implementations = "deny"
missing_docs = "deny"
redundant_imports = "deny"
redundant_lifetimes = "deny"
single_use_lifetimes = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unit_bindings = "deny"
unreachable_pub = "deny"
unused_extern_crates = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_macro_rules = "deny"
unused_qualifications = "deny"
unused_results = "deny"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = "debuginfo"

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = "0.1.48"
